[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="GameScene" type="Node2D" parent="."]
visible = false

[node name="GameCodeLabel" type="Label" parent="GameScene"]
margin_left = 36.0
margin_top = 28.0
margin_right = 111.0
margin_bottom = 42.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="Position2D" parent="GameScene"]
position = Vector2( 1500, 550 )

[node name="2" type="Position2D" parent="GameScene"]
position = Vector2( 420, 550 )

[node name="ButtonEndGame" type="Button" parent="GameScene"]
margin_left = 1733.73
margin_top = 41.466
margin_right = 1869.73
margin_bottom = 81.466
text = "End Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lobby" type="Panel" parent="."]
margin_left = 701.0
margin_top = 261.0
margin_right = 1219.0
margin_bottom = 817.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Lobby"]
margin_left = 23.0
margin_top = 501.0
margin_right = 337.0
margin_bottom = 541.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostButton" type="Button" parent="Lobby/HBoxContainer"]
margin_right = 84.0
margin_bottom = 40.0
text = "Host Game"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="SPACING" type="Label" parent="Lobby/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 88.0
margin_top = 13.0
margin_right = 245.0
margin_bottom = 27.0
text = "SPACINGGGGGGGGGGG"

[node name="MatchCodeLabel" type="Label" parent="Lobby/HBoxContainer"]
margin_left = 249.0
margin_top = 13.0
margin_right = 328.0
margin_bottom = 27.0
text = "Match Code:"

[node name="MatchCode" type="LineEdit" parent="Lobby/HBoxContainer"]
margin_left = 332.0
margin_right = 390.0
margin_bottom = 40.0

[node name="JoinButton" type="Button" parent="Lobby/HBoxContainer"]
margin_left = 394.0
margin_right = 471.0
margin_bottom = 40.0
text = "Join Game"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Lobby"]
margin_left = 21.0
margin_top = 25.0
margin_right = 498.0
margin_bottom = 487.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OnGoingGamesLabel" type="Label" parent="Lobby/VBoxContainer"]
margin_right = 477.0
margin_bottom = 14.0
text = "Ongoing Games:"

[node name="MatchList" type="ItemList" parent="Lobby/VBoxContainer"]
margin_top = 18.0
margin_right = 477.0
margin_bottom = 462.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MsgPanel" type="Panel" parent="."]
visible = false
margin_left = 755.0
margin_top = 425.0
margin_right = 1170.0
margin_bottom = 601.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Msg" type="Label" parent="MsgPanel"]
margin_left = 36.0
margin_top = 77.0
margin_right = 214.0
margin_bottom = 91.0
text = "Msg"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="MsgPanel"]
one_shot = true
[connection signal="pressed" from="GameScene/ButtonEndGame" to="." method="_on_ButtonEndGame_pressed"]
[connection signal="pressed" from="Lobby/HBoxContainer/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="Lobby/HBoxContainer/JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="timeout" from="MsgPanel/Timer" to="." method="_on_MsgTimer_timeout"]
